# stored-procedure-analizer

./: .gitignore  README.md  SP전환평가_사용매뉴얼.md  SP전환평가_추출스크립트.md  SP전환평가_프로그램스펙.md  SQL난이도평가_사용매뉴얼.md  pyproject.toml
examples/config/: config.yaml
examples/input/: in_app_calls.csv  in_arguments.csv  in_db_links.csv  in_dependencies.csv  in_objects.csv  in_role_privs.csv  in_scheduler_jobs.csv  in_source.csv  in_synonyms.csv  in_tab_privs.csv  in_triggers.csv
examples/sql/: effort_sample.csv  pkg_order.sql  prc_log_audit.sql  prc_settle.sql  scoring_config.yaml  trg_orders.sql
examples/sql_mixed/: effort_sample.csv  fn_customer_grade.sql  pkg_billing.sql  pkg_settlement_engine.sql  prc_expire_contracts.sql  prc_reconcile.sql  prc_simple.sql
sp_assessor/: __init__.py
sp_assessor/cli/: main.py
sp_assessor/core/: config.py  logging.py  paths.py
sp_assessor/io/: csv_io.py  csv_schemas.py
sp_assessor/stages/: diff.py  override_lint.py  s1_inventory.py  s2_metrics.py  s3_graph.py  s4_scoring.py  s5_report.py  spike.py  validate.py
sp_assessor/util/: text.py
sqlscore/: __init__.py  cli.py  config.py  dependencies.py  effort.py  htmlreport.py  metrics.py  model.py  parser.py  report.py  scoring.py  textutil.py  viz.py
tests/: test_s1_inventory.py  test_s2_metrics.py  test_s3_graph.py  test_s4_scoring.py  test_s5_report.py  test_spike_diff_override_lint.py  test_sqlscore.py  test_validate.py
