[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp-assessor"
version = "0.1.0"
description = "Oracle Stored Procedure → Backend Conversion Assessment Tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sp-assessor contributors" }]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "networkx>=3.2",
    "jinja2>=3.1",
    "rich>=13.7",
]

[project.optional-dependencies]
scoring = ["scikit-learn>=1.4", "numpy>=1.26", "scipy>=1.11"]
viz = ["matplotlib>=3.8", "numpy>=1.26", "openpyxl>=3.1"]
# leiden 커뮤니티 탐지 선택 시에만 필요 (default "louvain" 은 networkx 내장 구현 사용)
community = ["python-igraph>=0.11", "leidenalg>=0.10"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
sp-assessor = "sp_assessor.cli.main:app"
sql-scorer = "sqlscore.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sp_assessor*", "sqlscore*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
